# video_upscaler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/video_upscaler/: main.py
tests/: test_image_upscale.py  test_video_upscale.py
